--- a/Capstone-Project/FrontEnd/package.json
+++ b/Capstone-Project/FrontEnd/package.json
@@ -11,18 +11,29 @@
   },
   "dependencies": {
     "@coreui/react": "^4.8.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.5",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.9",
+    "@mui/lab": "^6.0.0-beta.17",
+    "@mui/material": "^6.1.9",
+    "@reduxjs/toolkit": "^2.2.5",
     "animate.css": "^4.1.1",
     "dotenv": "^16.1.4",
-    "firebase": "^11.0.2",
-    "jwt-decode": "^3.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "firebase": "^9.22.2",
+    "hls.js": "^1.4.6",
+    "plyr": "^3.7.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.10.1",
+    "react-loading": "^2.0.3",
+    "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.13.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "react-top-loading-bar": "^2.3.1",
+    "react-useanimations": "^2.10.0",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
